fix(css): add line hight for vertical align

--- a/jquery.toolbar.css
+++ b/jquery.toolbar.css
@@ -8,6 +8,7 @@
   background: #364347;
   width: 20px;
   height: 20px;
+  line-height: 20px;
   text-align: center;
   padding: 10px;
   border-radius: 6px;
